# automate-cellulaire-probabiliste-sim

./: .gitignore  Cargo.toml  README.md
simulation_setup/: .xdp-bitmap.png-9GbMkL  config5x5.json
src/: app.rs  lib.rs  main.rs  simulation.rs  simulation_save.rs
src/app/: renderer.rs
src/simulation/: simulation.cl  simulation_data.rs  simulator_cl.rs  simulator_cpu.rs
