[package]
name = "maths-appli-simulation"
version = "0.1.0"
edition = "2024"

[features]
default = ["cpu"]
cpu = []
opencl = ["ocl"]

[dependencies]
winit = "0.28"
pixels = "0.13"
ocl = { version = "0.19.7", optional = true }
rand = "0.9.2"
image = "0.25.9"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
crossterm = "0.29.0"

[build-dependencies]
pkg-config = "0.3"
